Actualizacion de animaciones a proyecto

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!-- Entrega Desafio 3 y Complementario, Alumno: Mauro Laiguera Valerio -->
+<!-- Entrega Desafio 4, Alumno: Mauro Laiguera Valerio -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/images/fav_icon.png" />
-    <link rel="stylesheet" href="/css/style.css" / >
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -32,10 +32,10 @@
     <main>
       <div class="alineacion">
         <section class="espacioArriba">
-          <h1 class="Bordeado">Eventos KL</h1>
+          <h1 class="Bordeado gradiente2">Eventos KL</h1>
         </section>
         <section class="espacioArriba">
-          <h3 class="ModTexto">
+          <h3 class="ModTexto animate__animated animate__fadeInUp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ducimus
             nesciunt ratione optio maxime voluptatibus quas, nisi eum
             reprehenderit! Consequatur, laudantium? Ullam, praesentium
@@ -46,7 +46,11 @@
           </h3>
         </section>
         <section>
-          <img src="/images/cumple_globos.png" alt="Cumpleaños" />
+          <img
+            src="/images/cumple_globos.png"
+            class="animate__swing"
+            alt="Cumpleaños"
+          />
           <img src="/images/fiesta_gente.png" alt="Fiesta" />
           <iframe
             width="560"
