--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Eventos KL | Eventos</title>
   </head>
   <body>
@@ -24,7 +28,9 @@
         </ul>
       </nav>
     </header>
-    <main class="ModTexto_alternativo">
+    <main
+      class="ModTexto_alternativo animate__animated animate__flash animate__faster animate__infinite"
+    >
       <h2>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur est
         velit tempora quidem, ullam id?
