--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Eventos KL | Galeria</title>
   </head>
   <body>
@@ -25,21 +29,77 @@
       </nav>
     </header>
     <main>
-      <section class="container-grid">
-        <img src="/images/galeria1.jpg" alt="" />
-        <img src="/images/galeria2.jpg" alt="" />
-        <img src="/images/galeria3.jpg" alt="" />
-        <img src="/images/galeria4.jpg" alt="" />
-        <img src="/images/galeria5.jpg" alt="" />
-        <img src="/images/galeria6.jpg" alt="" />
-        <img src="/images/galeria7.jpg" alt="" />
-        <img src="/images/galeria8.jpg" alt="" />
-        <img src="/images/galeria9.jpg" alt="" />
-        <img src="/images/galeria10.jpg" alt="" />
-        <img src="/images/galeria11.jpg" alt="" />
-        <img src="/images/galeria12.jpg" alt="" />
-        <img src="/images/galeria13.jpg" alt="" />
-        <img src="/images/galeria14.jpg" alt="" />
+      <section class="container-grid animate__animated animate__fadeInTopLeft">
+        <img
+          src="/images/galeria1.jpg"
+          class="animate__animated animate__backInDown animate__delay-2s"
+          alt=""
+        />
+        <img
+          src="/images/galeria2.jpg"
+          class="animate__animated animate__backInDown animate__delay-2s"
+          alt=""
+        />
+        <img
+          src="/images/galeria3.jpg"
+          class="animate__animated animate__backInDown animate__delay-2s"
+          alt=""
+        />
+        <img
+          src="/images/galeria4.jpg"
+          class="animate__animated animate__backInLeft animate__delay-3s"
+          alt=""
+        />
+        <img
+          src="/images/galeria5.jpg"
+          class="animate__animated animate__backInLeft animate__delay-3s"
+          alt=""
+        />
+        <img
+          src="/images/galeria6.jpg"
+          class="animate__animated animate__backInLeft animate__delay-4s"
+          alt=""
+        />
+        <img
+          src="/images/galeria7.jpg"
+          class="animate__animated animate__backInRight animate__delay-4s"
+          alt=""
+        />
+        <img
+          src="/images/galeria8.jpg"
+          class="animate__animated animate__backInRight animate__delay-5s"
+          alt=""
+        />
+        <img
+          src="/images/galeria9.jpg"
+          class="animate__animated animate__backInRight animate__delay-5s"
+          alt=""
+        />
+        <img
+          src="/images/galeria10.jpg"
+          class="animate__animated animate__backInUp animate__delay-5s"
+          alt=""
+        />
+        <img
+          src="/images/galeria11.jpg"
+          class="animate__animated animate__backInUp animate__delay-5s"
+          alt=""
+        />
+        <img
+          src="/images/galeria12.jpg"
+          class="animate__animated animate__backInUp animate__delay-5s"
+          alt=""
+        />
+        <img
+          src="/images/galeria13.jpg"
+          class="animate__animated animate__backInUp animate__delay-5s"
+          alt=""
+        />
+        <img
+          src="/images/galeria14.jpg"
+          class="animate__animated animate__backInUp animate__delay-5s"
+          alt=""
+        />
       </section>
     </main>
     <footer class="piePagina">
