--- a/pages/presupuestos.html
+++ b/pages/presupuestos.html
@@ -12,7 +12,7 @@
     />
     <title>Eventos KL | Presupuestos</title>
   </head>
-  <body>
+  <body class="gradiente">
     <header>
       <nav class="negrita">
         <ul class="nav_flex">
