--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Eventos KL | Contacto</title>
   </head>
   <body>
