--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,10 +20,10 @@
     <header>
       <nav class="negrita">
         <ul class="nav_flex">
-          <li><a href="/index.html">Inicio</a></li>
-          <li><a href="/pages/eventos.html">Eventos</a></li>
-          <li><a href="/pages/galeria.html">Galeria</a></li>
-          <li><a href="/pages/presupuestos.html">Presupuestos</a></li>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./pages/eventos.html">Eventos</a></li>
+          <li><a href="./pages/galeria.html">Galeria</a></li>
+          <li><a href="./pages/presupuestos.html">Presupuestos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
