--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -20,11 +20,11 @@
     <header>
       <nav class="negrita">
         <ul class="nav_flex">
-          <li><a href="/index.html">Inicio</a></li>
-          <li><a href="/pages/eventos.html">Eventos</a></li>
-          <li><a href="/pages/galeria.html">Galeria</a></li>
-          <li><a href="/pages/presupuestos.html">Presupuestos</a></li>
-          <li><a href="/pages/contacto.html">Contacto</a></li>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./eventos.html">Eventos</a></li>
+          <li><a href="./pages/galeria.html">Galeria</a></li>
+          <li><a href="./pages/presupuestos.html">Presupuestos</a></li>
+          <li><a href="./pages/contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
