--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./images/fav_icon.png" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="/images/fav_icon.png" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -20,10 +20,10 @@
     <header>
       <nav class="negrita">
         <ul class="nav_flex">
-          <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./pages/eventos.html">Eventos</a></li>
-          <li><a href="./pages/galeria.html">Galeria</a></li>
-          <li><a href="./pages/presupuestos.html">Presupuestos</a></li>
+          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="/pages/eventos.html">Eventos</a></li>
+          <li><a href="/pages/galeria.html">Galeria</a></li>
+          <li><a href="/pages/presupuestos.html">Presupuestos</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
