--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Entrega Desafio 4, Alumno: Mauro Laiguera Valerio -->
+<!-- Entrega Desafio 5, Alumno: Mauro Laiguera Valerio -->
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -15,26 +15,38 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+
     <title>Eventos KL</title>
   </head>
   <body>
     <header>
-      <nav class="negrita">
-        <ul class="nav_flex">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="./pages/eventos.html">Eventos</a></li>
-          <li><a href="./pages/galeria.html">Galeria</a></li>
-          <li><a href="./pages/presupuestos.html">Presupuestos</a></li>
-          <li><a href="./pages/contacto.html">Contacto</a></li>
-        </ul>
-      </nav>
+      <div class="row row-cols-auto">
+        <nav class="negrita">
+          <ul class="nav_flex">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="/pages/eventos.html">Eventos</a></li>
+            <li><a href="/pages/galeria.html">Galeria</a></li>
+            <li>
+              <a href="/pages/presupuestos.html">Presupuestos</a>
+            </li>
+            <li class="col-1"><a href="/pages/contacto.html">Contacto</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <div class="alineacion">
         <section class="espacioArriba">
           <h1 class="Bordeado gradiente2">Eventos KL</h1>
         </section>
-        <section class="espacioArriba">
+        <section class="espacioArriba col-12">
           <h3 class="ModTexto animate__animated animate__fadeInUp">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ducimus
             nesciunt ratione optio maxime voluptatibus quas, nisi eum
@@ -64,12 +76,18 @@
         </section>
       </div>
     </main>
-    <footer class="piePagina">
+    <footer class="piePagina col-12">
       <br />
       <span>(011) 15-1212-5645 | mail@mail.com | </span>
       <img src="/images/facebook.png" alt="Logo facebook" />
       <img src="/images/instagram.png" alt="Logo instagram" />
       <img src="/images/twitter.png" alt="Logo twitter" />
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
