--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./images/fav_icon.png" />
-    <link rel="stylesheet" href="./css/style.css" / >
+    <link rel="shortcut icon" href="/images/fav_icon.png" />
+    <link rel="stylesheet" href="/css/style.css" / >
     <link
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -14,93 +14,104 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <title>Eventos KL | Galeria</title>
   </head>
   <body>
     <header>
       <nav class="negrita">
         <ul class="nav_flex">
-          <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./pages/eventos.html">Eventos</a></li>
+          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="/pages/eventos.html">Eventos</a></li>
           <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="./pages/presupuestos.html">Presupuestos</a></li>
-          <li><a href="./pages/contacto.html">Contacto</a></li>
+          <li><a href="/pages/presupuestos.html">Presupuestos</a></li>
+          <li><a href="/pages/contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section class="container-grid animate__animated animate__fadeInTopLeft">
-        <img
-          src="/images/galeria1.jpg"
-          class="animate__animated animate__backInDown animate__delay-2s"
-          alt=""
-        />
-        <img
-          src="/images/galeria2.jpg"
-          class="animate__animated animate__backInDown animate__delay-2s"
-          alt=""
-        />
-        <img
-          src="/images/galeria3.jpg"
-          class="animate__animated animate__backInDown animate__delay-2s"
-          alt=""
-        />
-        <img
-          src="/images/galeria4.jpg"
-          class="animate__animated animate__backInLeft animate__delay-3s"
-          alt=""
-        />
-        <img
-          src="/images/galeria5.jpg"
-          class="animate__animated animate__backInLeft animate__delay-3s"
-          alt=""
-        />
-        <img
-          src="/images/galeria6.jpg"
-          class="animate__animated animate__backInLeft animate__delay-4s"
-          alt=""
-        />
-        <img
-          src="/images/galeria7.jpg"
-          class="animate__animated animate__backInRight animate__delay-4s"
-          alt=""
-        />
-        <img
-          src="/images/galeria8.jpg"
-          class="animate__animated animate__backInRight animate__delay-5s"
-          alt=""
-        />
-        <img
-          src="/images/galeria9.jpg"
-          class="animate__animated animate__backInRight animate__delay-5s"
-          alt=""
-        />
-        <img
-          src="/images/galeria10.jpg"
-          class="animate__animated animate__backInUp animate__delay-5s"
-          alt=""
-        />
-        <img
-          src="/images/galeria11.jpg"
-          class="animate__animated animate__backInUp animate__delay-5s"
-          alt=""
-        />
-        <img
-          src="/images/galeria12.jpg"
-          class="animate__animated animate__backInUp animate__delay-5s"
-          alt=""
-        />
-        <img
-          src="/images/galeria13.jpg"
-          class="animate__animated animate__backInUp animate__delay-5s"
-          alt=""
-        />
-        <img
-          src="/images/galeria14.jpg"
-          class="animate__animated animate__backInUp animate__delay-5s"
-          alt=""
-        />
-      </section>
+      <div class="row">
+        <div class="col-4">
+          <section class="animate__animated animate__fadeInTopLeft">
+            <img
+              src="/images/galeria1.jpg"
+              class="animate__animated animate__backInDown animate__delay-2s"
+              alt=""
+            />
+            <img
+              src="/images/galeria2.jpg"
+              class="animate__animated animate__backInDown animate__delay-2s"
+              alt=""
+            />
+            <img
+              src="/images/galeria3.jpg"
+              class="animate__animated animate__backInDown animate__delay-2s"
+              alt=""
+            />
+            <img
+              src="/images/galeria4.jpg"
+              class="animate__animated animate__backInLeft animate__delay-3s"
+              alt=""
+            />
+            <img
+              src="/images/galeria5.jpg"
+              class="animate__animated animate__backInLeft animate__delay-3s"
+              alt=""
+            />
+            <img
+              src="/images/galeria6.jpg"
+              class="animate__animated animate__backInLeft animate__delay-4s"
+              alt=""
+            />
+            <img
+              src="/images/galeria7.jpg"
+              class="animate__animated animate__backInRight animate__delay-4s"
+              alt=""
+            />
+            <img
+              src="/images/galeria8.jpg"
+              class="animate__animated animate__backInRight animate__delay-5s"
+              alt=""
+            />
+            <img
+              src="/images/galeria9.jpg"
+              class="animate__animated animate__backInRight animate__delay-5s"
+              alt=""
+            />
+            <img
+              src="/images/galeria10.jpg"
+              class="animate__animated animate__backInUp animate__delay-5s"
+              alt=""
+            />
+            <img
+              src="/images/galeria11.jpg"
+              class="animate__animated animate__backInUp animate__delay-5s"
+              alt=""
+            />
+            <img
+              src="/images/galeria12.jpg"
+              class="animate__animated animate__backInUp animate__delay-5s"
+              alt=""
+            />
+            <img
+              src="/images/galeria13.jpg"
+              class="animate__animated animate__backInUp animate__delay-5s"
+              alt=""
+            />
+            <img
+              src="/images/galeria14.jpg"
+              class="animate__animated animate__backInUp animate__delay-5s"
+              alt=""
+            />
+          </section>
+        </div>
+      </div>
     </main>
     <footer class="piePagina">
       <br />
@@ -109,5 +120,11 @@
       <img src="/images/instagram.png" alt="Logo instagram" />
       <img src="/images/twitter.png" alt="Logo twitter" />
     </footer>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
