--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="nav_flex">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="/pages/eventos.html">Eventos</a></li>
-            <li><a href="/pages/galeria.html">Galeria</a></li>
+            <li><a href="../pages/galeria.html">Galeria</a></li>
             <li>
               <a href="/pages/presupuestos.html">Presupuestos</a>
             </li>
